--- a/form.html
+++ b/form.html
@@ -115,7 +115,7 @@
             <div class="gender group">
                 <label for="female"> Women</label>
                 <input type="radio" checked name="gender" id="female" value="">
-                <label for="male">Man</label>
+                <label for="male">Men</label>
                 <input type="radio" name="gender" id="male" value="">
             </div>
             <!-- age -->
